Restructured and pushed to internal

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-VERSION_NAME=2.2.6
+VERSION_NAME=2.2.6-internal
 VERSION_CODE=2002006
 GROUP=net.atomcode
 
@@ -17,6 +17,6 @@ POM_LICENSE_NAME=The Apache Software License, Version 2.0
 POM_LICENSE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENSE_DIST=repo
 
-POM_DEVELOPER_ID=tom-bell
-POM_DEVELOPER_NAME=Tom Bell
+POM_DEVELOPER_ID=scruffyfox
+POM_DEVELOPER_NAME=Callum Taylor
 
