Updated dependencies and change group ID/version

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
-VERSION_NAME=2.2.8-internal
-VERSION_CODE=2002006
-GROUP=net.atomcode
+VERSION_NAME=2.3-SNAPSHOT
+VERSION_CODE=2002007
+GROUP=com.3sidedcube.util
 
 POM_NAME=Bearing
 POM_ARTIFACT_ID=bearing
 POM_PACKAGING=aar
 
 POM_DESCRIPTION=Android location acquisition. Simplified.
-POM_URL=https://github.com/tom-bell/Bearing/
+POM_URL=https://github.com/3sidedcube/Bearing/
 
-POM_SCM_URL=https://github.com/tom-bell/Bearing/
-POM_SCM_CONNECTION=scm:git@github.com:tom-bell/Bearing.git
-POM_SCM_DEV_CONNECTION=scm:git@github.com:tom-bell/Bearing.git
+POM_SCM_URL=https://github.com/3sidedcube/Bearing/
+POM_SCM_CONNECTION=scm:git@github.com:3sidedcube/Bearing.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:3sidedcube/Bearing.git
 
 POM_LICENSE_NAME=The Apache Software License, Version 2.0
 POM_LICENSE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
