--- a/build.gradle
+++ b/build.gradle
@@ -6,22 +6,23 @@ buildscript {
 	}
 
 	dependencies {
-		classpath 'com.android.tools.build:gradle:2.0.0'
+		classpath 'com.android.tools.build:gradle:2.3.1'
 	}
 }
 
 allprojects {
 	repositories {
 		jcenter()
+		maven { url "https://maven.google.com" }
 		maven {
 			url 'http://oss.3sidedcube.com:8081/artifactory/internal'
 		}
-        maven {
-            credentials {
-                username "$ARTIFACTORY_USERNAME"
-                password "$ARTIFACTORY_PASSWORD"
-            }
-            url 'http://oss.3sidedcube.com:8081/artifactory/private'
-        }
+		maven {
+			credentials {
+				username "$ARTIFACTORY_USERNAME"
+				password "$ARTIFACTORY_PASSWORD"
+			}
+			url 'http://oss.3sidedcube.com:8081/artifactory/private'
+		}
 	}
 }
