--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,18 @@
 buildscript {
 	repositories {
 		jcenter()
+		google()
 	}
 
 	dependencies {
-		classpath 'com.android.tools.build:gradle:2.3.1'
+		classpath 'com.android.tools.build:gradle:3.1.4'
 	}
 }
 
 allprojects {
 	repositories {
 		jcenter()
-		maven { url "https://maven.google.com" }
+		google()
 		maven {
 			url 'http://oss.3sidedcube.com:8081/artifactory/internal'
 		}
